--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
-POSTGRES_DB=ecommerce
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=admin
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${POSTGRES_DB}
 SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
 SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
