Send email function implemmented using sqs and sns

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       SPRING_JPA_HIBERNATE_DDL-AUTO: ${SPRING_JPA_HIBERNATE_DDL-AUTO}
       SPRING_JPA_DATABASE-PLATFORM: ${SPRING_JPA_DATABASE-PLATFORM}
       SPRING_JPA_SHOW_SQL: ${SPRING_JPA_SHOW_SQL}
+      AWS_REGION: ${AWS_REGION}
+      AWS_URL: ${AWS_URL}
+      AWS_ACCOUNT_ID: ${AWS_ACCOUNT_ID}
+      AWS_QUEUE_NAME: ${AWS_QUEUE_NAME}
     env_file:
       - .env
     depends_on:
