--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 
 server.port=${SERVER_PORT}
+
+aws.region=${AWS_REGION}
+aws.url=${AWS_URL}
+aws.account-id=${AWS_ACCOUNT_ID}
+aws.queue.name=${AWS_QUEUE_NAME}
