--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
 SPRING_JPA_SHOW_SQL=true
 
 SERVER_PORT=8080
+
+AWS_REGION=us-east-1
+AWS_URL=https://sqs.us-east-1.amazonaws.com
+AWS_ACCOUNT_ID=791077912250
+AWS_QUEUE_NAME=loan-request-status-updates
