--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ AWS_REGION=us-east-1
 AWS_URL=https://sqs.us-east-1.amazonaws.com
 AWS_ACCOUNT_ID=791077912250
 AWS_QUEUE_NAME=loan-request-status-updates
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
